--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   
-  <script src="study_log/220414.js"></script>
-  <!-- <script src="study_log/220412.js"></script> -->
+  <script src="study_log/220415_2.js"></script>
 </body>
 </html>  
