--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   
-  <script src="study_log/220415_2.js"></script>
+  <script src="study_log/220418.js"></script>
 </body>
 </html>  
